@@ -95,6 +95,20 @@ large).  Finally, restart \emph{beng-proxy}:
 /etc/init.d/cm4all-beng-proxy restart
 \end{verbatim*}
 
+\subsection{Configuration options}
+
+The command line argument \texttt{--set} allows you to tweak some
+settings:
+
+\begin{tabular}{|l|p{10cm}|}
+\hline
+
+\texttt{max\_connections} & The maximum number of incoming HTTP
+connections. \\
+
+\hline
+\end{tabular}
+
 
 \section{Resources}
 
